downgrade spring-boot 3.0.x -> 2.7.x; added openapi documentation via swagger

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5678/ine5613
 spring.datasource.username=ufsc
 spring.datasource.password=ufsc
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
