--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -40,6 +40,11 @@
         <version>1.5.3.Final</version>
       </dependency>
       <dependency>
+        <groupId>io.springfox</groupId>
+        <artifactId>springfox-boot-starter</artifactId>
+        <version>3.0.0</version>
+      </dependency>
+      <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-test</artifactId>
         <scope>test</scope>
