--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -40,9 +40,9 @@
         <version>1.5.3.Final</version>
       </dependency>
       <dependency>
-        <groupId>io.springfox</groupId>
-        <artifactId>springfox-boot-starter</artifactId>
-        <version>3.0.0</version>
+        <groupId>org.springdoc</groupId>
+        <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+        <version>2.2.0</version>
       </dependency>
       <dependency>
         <groupId>org.springframework.boot</groupId>
