--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,5 +2,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5678/ine5613
 spring.datasource.username=ufsc
 spring.datasource.password=ufsc
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+springdoc.packagesToScan=br.ufsc.ine5613
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
